--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="spaceleft-right">
             <nav class="navbar navbar-expand-md navbar-dark mb-4">
                 <div class="container-fluid"> 
-                    <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
+                    <a class="navbar-brand" href="#"><img src="images/logoimg.png"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                         aria-label="Toggle navigation">
