--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                         <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
                         <a href="" class="btn">Talk To Us Today</a>
                    </div> 
+                   <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
                 </div>
                 <div class="banner-image">
                     <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
@@ -116,7 +117,7 @@
                 <div class="col-md-3 no-padding bluecolor">
                     <div class="color-box">
                         <h5>Our Vision</h5>
-                        <p>Your Better Care’s envisions fostering a resilient and empowered community through collaborative partnerships to enhance the lives of individuals with disabilities, enabling them to lead fulfilling lives with a range of choices.</p>
+                        <p>Your Better Care's envisions fostering a resilient and empowered community through collaborative partnerships to enhance the lives of individuals with disabilities, enabling them to lead fulfilling lives with a range of choices.</p>
                     </div>
                 </div>
                 <div class="col-md-3 no-padding greencolor">
@@ -147,7 +148,7 @@
                         <h6>Welcome to</h6>
                         <h2>Your Better Care Community Services</h2>
                         <p>Your Better Care was started with an intent to provide compassionate care that not only empowers, but also revives hope among those requiring care and support. We believe in walking our talk, as our work goes beyond mere business. Our team of certified employees has extensive experience in dealing with disabled and specially-abled people and children. We revel when we are able to enable our clients develop skills and capabilities that allow them to live with dignity and independence.</p>
-                        <a href="" class="btn">Discover More</a>
+                        <a href="#" class="btn redbtn">Discover More<i><img src="images/arrright.png"></i></a>
                     </div> 
                 </div>  
                 <div class="col-lg-6 col-md-12">
@@ -200,7 +201,7 @@
                 </div>
                 <div class="col-md-12">
                     <div class="text-center">
-                        <a href="" class="btn">View All Services</a>
+                        <a href="#" class="btn redbtn">View All Services<i><img src="images/arrright.png"></i></a>
                     </div>
                 </div>
             </div> 
@@ -238,10 +239,53 @@
                         </div>
                     </div>  
                 </div>
+                <div class="col-md-12 mt-5">
+                    <div class="text-center">
+                        <a href="#" class="btn redbtn bluebtn">Discover Your Better Care<i><img src="images/arrblue.png"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
+    <div class="who-qualifies-section top-bottom-space">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6">
+                    <h2>Who Qualifies for<br> 
+                        the NDIS?</h2>
+                    <h6>If you want to receive NDIS help, you must:</h6>
+                    <div class="list-style">
+                        <ul>
+                            <li>Possess a protected special category visa, be an Australian citizen, or be a permanent resident of Australia.</li>
+                            <li>Be between the ages of 7 and 65</li>
+                            <li>Have a serious, ongoing disability that affects your capacity to engage in activities of daily living OR need ongoing assistance to lessen your future needs</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="qualifies-image"><img src="images/qualifies.png" class="img-fluid" alt="banner-image"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="blog-section-wrapper top-bottom-space">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="video-title">
+                    <h6>Your Better Care</h6>
+                    <h2>Latest News & Blogs</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4">
+                    <div class="blog-box">
+                        <div class="blog-img"><img src="images/blog1.jpg" class="img-fluid" alt="banner-image"></div>
+                        <div class="blog-date">Jan 11, 2024</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     
