--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,400;0,700;0,800;0,900;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -280,7 +281,37 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="blog-box">
                         <div class="blog-img"><img src="images/blog1.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="blog-date">Jan 11, 2024</div>
+                        <div class="blog-date"><i class="bi bi-clock"></i> Jan 11, 2024</div>
+                        <p>Amet quis nisi, faucibus sit pulvinar in et. Urna cursus eleifend hac vitae fusce.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <div class="blog-box">
+                        <div class="blog-img"><img src="images/blog1.jpg" class="img-fluid" alt="banner-image"></div>
+                        <div class="blog-date"><i class="bi bi-clock"></i> Jan 11, 2024</div>
+                        <p>Amet quis nisi, faucibus sit pulvinar in et. Urna cursus eleifend hac vitae fusce.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <div class="blog-box">
+                        <div class="blog-img"><img src="images/blog1.jpg" class="img-fluid" alt="banner-image"></div>
+                        <div class="blog-date"><i class="bi bi-clock"></i> Jan 11, 2024</div>
+                        <p>Arcu, sed ac, gravida quam tincidunt. Sed amet id lectus non semper lacus diam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="tes-section-wrapper top-bottom-space">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6">
+                    <div class="tes-content">
+                        <h4>We are committed to offer you a high standard of care.</h4>
+                        <h3><sub>+61</sub> 466 355 650</h3>
+                        <div class="text-left">
+                            <a href="#" class="btn redbtn">View All Services<i><img src="images/arrright.png"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
