--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             </div>
         </div>
     </div>    
-    <div class="footer-section-wrapper top-bottom-space">
+    <div class="footer-section-wrapper top-bottom-space space-top">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -433,7 +433,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7"><p>Copyright © 2024 Your Better Care Community Service. All Rights Reserved.</p></div>
-                <div class="col-md-5"><p class="text-right">Privacy Policy    |    Terms & Conditions</p></div>
+                <div class="col-md-5"><p class="text-align-right">Privacy Policy    |    Terms & Conditions</p></div>
             </div>
         </div>
     </div>
