--- a/index.html
+++ b/index.html
@@ -347,22 +347,22 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4">
                     <div class="social-image"><img src="images/so1.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4">
                     <div class="social-image"><img src="images/so2.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4">
                     <div class="social-image"><img src="images/so3.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4">
                     <div class="social-image"><img src="images/so4.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4">
                     <div class="social-image"><img src="images/so6.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4">
                     <div class="social-media-icons">
                         <div class="row">
                             <div class="col-md-6">
@@ -386,10 +386,10 @@
     <div class="footer-section-wrapper top-bottom-space space-top">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="footer-logo"><img src="images/yourbetter.png" class="img-fluid"></div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="footer-content">
                         <div class="footer-title">
                             <h3><a href="tel:+61 466 355 650">+61 466 355 650</a></h3>
@@ -401,7 +401,7 @@
                         <div class="tw-seven"><img src="images/247.png" class="img-fluid"></div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="footer-content">
                         <div class="footer-title">
                             <h3>Address</h3>
@@ -414,7 +414,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="footer-content footer-links">
                         <div class="footer-title">
                             <h3>Navigation</h3>
