--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="top-header">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 no-padding">
+                    <div class="col-lg-6 col-md-6 no-padding">
                         <div class="email-and-home">
                             <div class="home-link"><a href="#"><i class="bi bi-house-door-fill"></i></a></div>
                             <div class="email-link">
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 no-padding">
+                    <div class="col-lg-6 col-md-6 no-padding">
                         <div class="phone-contact">
                             <div class="phone-link">
                                 <a href="#"><i class="bi bi-headset"></i> +61 466 355 650</a>
@@ -77,7 +77,6 @@
         </div>
     </header>
     <div class="banner-section-wrapper">
-
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-12">
@@ -347,34 +346,34 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-md-4">
+                <div class="col-lg-2 col-md-4 col-sm-4 col-6">
                     <div class="social-image"><img src="images/so1.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-lg-2 col-md-4">
+                <div class="col-lg-2 col-md-4 col-sm-4 col-6">
                     <div class="social-image"><img src="images/so2.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-lg-2 col-md-4">
+                <div class="col-lg-2 col-md-4 col-sm-4 col-6">
                     <div class="social-image"><img src="images/so3.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-lg-2 col-md-4">
+                <div class="col-lg-2 col-md-4 col-sm-4 col-6">
                     <div class="social-image"><img src="images/so4.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-lg-2 col-md-4">
+                <div class="col-lg-2 col-md-4 col-sm-4 col-6">
                     <div class="social-image"><img src="images/so6.jpg" class="img-fluid" alt="banner-image"></div>
                 </div>
-                <div class="col-lg-2 col-md-4">
+                <div class="col-lg-2 col-md-4 col-sm-4 col-6">
                     <div class="social-media-icons">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-sm-6 col-6">
                                 <div class="social-icon"><i class="bi bi-instagram"></i></div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-sm-6 col-6">
                                 <div class="social-icon"><i class="bi bi-facebook"></i></div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-sm-6 col-6">
                                 <div class="social-icon"><i class="bi bi-youtube"></i></div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-sm-6 col-6">
                                 <div class="social-icon"><i class="bi bi-linkedin"></i></div>
                             </div>
                         </div>
@@ -386,10 +385,10 @@
     <div class="footer-section-wrapper top-bottom-space space-top">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer-logo"><img src="images/yourbetter.png" class="img-fluid"></div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer-content">
                         <div class="footer-title">
                             <h3><a href="tel:+61 466 355 650">+61 466 355 650</a></h3>
@@ -401,7 +400,7 @@
                         <div class="tw-seven"><img src="images/247.png" class="img-fluid"></div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer-content">
                         <div class="footer-title">
                             <h3>Address</h3>
@@ -414,7 +413,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer-content footer-links">
                         <div class="footer-title">
                             <h3>Navigation</h3>
@@ -438,8 +437,6 @@
             </div>
         </div>
     </div>
-
-
     <footer>
         
 
