--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,400;0,700;0,800;0,900;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -94,6 +95,26 @@
             </div>
         </div>
     </div>
+
+    <section class="banner-section-wrapper">
+        <div class="container p-0">
+            <div class="owl-one owl-carousel owl-theme">
+                <div class="item">
+                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                </div>
+                <div class="item">
+                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                </div>
+                <div class="item">
+                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                </div>
+                <div class="item">
+                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <div class="intro-text">
         <div class="container">
             <div class="row">
@@ -444,6 +465,37 @@
             integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
             crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        
+        <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+        <script>
+            $(document).ready(function(){
+                $('.owl-one').owlCarousel({
+                    items:1,
+                    loop:true,
+                    margin:10,
+                    nav:true,
+                    autoplay:true,
+                    autoplayTimeout:2000,
+                    autoplayHoverPause:true
+                });
+                $('.owl-two').owlCarousel({
+                    items:1,
+                    loop:true,
+                    margin:10,
+                    nav:true,
+                    autoplay:true,
+                    autoplayTimeout:2000,
+                    autoplayHoverPause:true
+                });
+                $('.play').on('click',function(){
+                    owl.trigger('play.owl.autoplay',[1000])
+                })
+                $('.stop').on('click',function(){
+                    owl.trigger('stop.owl.autoplay')
+                })
+            
+              });
+        </script>
 
     </footer>
 </body>
