--- a/index.html
+++ b/index.html
@@ -100,16 +100,68 @@
         <div class="container p-0">
             <div class="owl-one owl-carousel owl-theme">
                 <div class="item">
-                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 col-md-12">
+                           <div class="banner-box">
+                                <h6>Your Better Care</h6>
+                                <h2>Empowering You Through Comprehensive Care</h2>
+                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
+                                <a href="" class="btn">Talk To Us Today</a>
+                           </div> 
+                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
+                        </div>
+                        <div class="banner-image">
+                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
+                        </div>
+                    </div>
                 </div>
                 <div class="item">
-                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 col-md-12">
+                           <div class="banner-box">
+                                <h6>Your Better Care</h6>
+                                <h2>Empowering You Through Comprehensive Care</h2>
+                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
+                                <a href="" class="btn">Talk To Us Today</a>
+                           </div> 
+                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
+                        </div>
+                        <div class="banner-image">
+                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
+                        </div>
+                    </div>
                 </div>
                 <div class="item">
-                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 col-md-12">
+                           <div class="banner-box">
+                                <h6>Your Better Care</h6>
+                                <h2>Empowering You Through Comprehensive Care</h2>
+                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
+                                <a href="" class="btn">Talk To Us Today</a>
+                           </div> 
+                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
+                        </div>
+                        <div class="banner-image">
+                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
+                        </div>
+                    </div>
                 </div>
                 <div class="item">
-                    <div class="bnn-img"><img src="images/bnn-img.jpg"></div>
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 col-md-12">
+                           <div class="banner-box">
+                                <h6>Your Better Care</h6>
+                                <h2>Empowering You Through Comprehensive Care</h2>
+                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
+                                <a href="" class="btn">Talk To Us Today</a>
+                           </div> 
+                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
+                        </div>
+                        <div class="banner-image">
+                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -465,7 +517,7 @@
             integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
             crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        
+
         <script src="js/owl.carousel.min.js" type="text/javascript"></script>
         <script>
             $(document).ready(function(){
