--- a/index.html
+++ b/index.html
@@ -77,25 +77,6 @@
             </nav>
         </div>
     </header>
-    <div class="banner-section-wrapper">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-12">
-                   <div class="banner-box">
-                        <h6>Your Better Care</h6>
-                        <h2>Empowering You Through Comprehensive Care</h2>
-                        <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
-                        <a href="" class="btn">Talk To Us Today</a>
-                   </div> 
-                   <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
-                </div>
-                <div class="banner-image">
-                    <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
-                </div>
-            </div>
-        </div>
-    </div>
-
     <section class="banner-section-wrapper">
         <div class="container p-0">
             <div class="owl-one owl-carousel owl-theme">
@@ -524,6 +505,7 @@
                 $('.owl-one').owlCarousel({
                     items:1,
                     loop:true,
+                    dots: true,
                     margin:10,
                     nav:true,
                     autoplay:true,
