--- a/index.html
+++ b/index.html
@@ -507,9 +507,9 @@
                     loop:true,
                     dots: true,
                     margin:10,
-                    nav:true,
+                    nav:false,
                     autoplay:true,
-                    autoplayTimeout:2000,
+                    autoplayTimeout:3000,
                     autoplayHoverPause:true
                 });
                 $('.owl-two').owlCarousel({
