--- a/services.html
+++ b/services.html
@@ -77,285 +77,63 @@
             </nav>
         </div>
     </header>
-    <section class="banner-section-wrapper">
-        <div class="container p-0">
-            <div class="owl-one owl-carousel owl-theme">
-                <div class="item">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6 col-md-12">
-                           <div class="banner-box">
-                                <h6>Your Better Care</h6>
-                                <h2>Empowering You Through Comprehensive Care</h2>
-                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
-                                <a href="" class="btn">Talk To Us Today</a>
-                           </div> 
-                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
-                        </div>
-                        <div class="banner-image">
-                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6 col-md-12">
-                           <div class="banner-box">
-                                <h6>Your Better Care</h6>
-                                <h2>Empowering You Through Comprehensive Care</h2>
-                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
-                                <a href="" class="btn">Talk To Us Today</a>
-                           </div> 
-                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
-                        </div>
-                        <div class="banner-image">
-                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6 col-md-12">
-                           <div class="banner-box">
-                                <h6>Your Better Care</h6>
-                                <h2>Empowering You Through Comprehensive Care</h2>
-                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
-                                <a href="" class="btn">Talk To Us Today</a>
-                           </div> 
-                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
-                        </div>
-                        <div class="banner-image">
-                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6 col-md-12">
-                           <div class="banner-box">
-                                <h6>Your Better Care</h6>
-                                <h2>Empowering You Through Comprehensive Care</h2>
-                                <p>Your Better Care is a dedicated organisation providing dependable and comprehensive care to the individuals with disabilities. We work on a holistic approach with our participants to enhance their full potential of life.</p>
-                                <a href="" class="btn">Talk To Us Today</a>
-                           </div> 
-                           <div class="ilove"><img src="images/heart.png" class="img-fluid"></div>
-                        </div>
-                        <div class="banner-image">
-                            <img src="images/banner-image.jpg" class="img-fluid" alt="banner-image">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="intro-text">
+    <div class="page-name-section bottom-space">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-12">
-                    <p class="text-center">Our friendly consultants make sure that quality and friendly services are provided to each of our esteemed participants. Quality is of utmost importance. We ensure that premium support is provided to meet our participant’s individual needs.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="colorfull-boxes">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3 no-padding darkgreen">
-                    <div class="color-box">
-                        <h5>Our Mission</h5>
-                        <ul class="list-style">
-                            <li>Empowering and enabling individuals in their aging journey and those with disabilities to improve their quality of life with dignity and respect.</li>
-                            <li>Surpassing stakeholders' expectations through continuous evaluation and enhancement.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3 no-padding bluecolor">
-                    <div class="color-box">
-                        <h5>Our Vision</h5>
-                        <p>Your Better Care's envisions fostering a resilient and empowered community through collaborative partnerships to enhance the lives of individuals with disabilities, enabling them to lead fulfilling lives with a range of choices.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 no-padding greencolor">
-                    <div class="color-box">
-                        <h5>Our Values</h5>
-                        <ul class="list-style">
-                            <li>Respect</li>
-                            <li>Dignity</li>
-                            <li>Integrity</li>
-                            <li>Innovation</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3 no-padding purplecolor">
-                    <div class="color-box">
-                        <h5>Accountability & Operational Excellence</h5>
-                        <p>We take responsibility for every decision and action, and we are dedicated to fostering a culture of continuous learning.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="aboutus-section top-bottom-space">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-5 col-md-12">
                     <div class="banner-box section-text">
-                        <h6>Welcome to</h6>
-                        <h2>Your Better Care Community Services</h2>
-                        <p>Your Better Care was started with an intent to provide compassionate care that not only empowers, but also revives hope among those requiring care and support. We believe in walking our talk, as our work goes beyond mere business. Our team of certified employees has extensive experience in dealing with disabled and specially-abled people and children. We revel when we are able to enable our clients develop skills and capabilities that allow them to live with dignity and independence.</p>
-                        <a href="#" class="btn redbtn">Discover More<i><img src="images/arrright.png"></i></a>
+                        <h2>Our<br> Services</h2>
                     </div> 
                 </div>  
-                <div class="col-lg-6 col-md-12">
-                    <div><img src="images/abt.jpg" class="img-fluid" alt="banner-image"></div>
+                <div class="col-lg-7 col-md-12">
+                    <div><img src="images/services-title.jpg" class="img-fluid" alt="banner-image"></div>
                 </div> 
             </div>
         </div>
     </div>
     <div class="our-services-wrapper">
-        <div class="section-title text-center">
-            <h2>Our Services</h2>
-        </div>
        <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="service-box">
+                    <a href="services-details.html" class="service-box">
                         <div class="service-image"><img src="images/s1.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Assist Access / Maintain Employment</h2></div>
-                    </div>
+                    </a>
                 </div> 
                 <div class="col-md-4">
-                    <div class="service-box">
+                    <a href="services-details.html" class="service-box">
                         <div class="service-image"><img src="images/s2.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Assist-Life Stage Transition</h2></div>
-                    </div>
+                    </a>
                 </div> 
                 <div class="col-md-4">
-                    <div class="service-box">
+                    <a href="services-details.html" class="service-box">
                         <div class="service-image"><img src="images/s3.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Assist-Personal Activities</h2></div>
-                    </div>
+                    </a>
                 </div>   
                 <div class="col-md-4">
-                    <div class="service-box">
+                    <a href="services-details.html" class="service-box">
                         <div class="service-image"><img src="images/s4.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Assist - Travel / Transport</h2></div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="service-box">
+                    <a href="services-details.html" class="service-box">
                         <div class="service-image"><img src="images/s5.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Daily Tasks / Shared Living</h2></div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="service-box">
+                    <a href="services-details.html" class="service-box">
                         <div class="service-image"><img src="images/s6.jpg" class="img-fluid" alt="banner-image"></div>
                         <div class="service-title"><h2>Innovative Community Participation</h2></div>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="text-center">
-                        <a href="#" class="btn redbtn">View All Services<i><img src="images/arrright.png"></i></a>
-                    </div>
+                    </a>
                 </div>
             </div> 
         </div>
     </div>
 
-    <div class="videos-section-wrapper top-bottom-space">
-        <div class="text-center video-title">
-            <h6>Your Better Care</h6>
-            <h2>Exclusive Programs & Services: The Best<br> Healthcare Experience</h2>
-        </div>
-        <div class="container">
-            <div class="row mt-5">
-                <div class="col-lg-6 col-md-6">
-                    <div class="video-wrapper">
-                       <div class="highlights-video">
-                            <iframe src="https://www.youtube.com/embed/FGwdRWTw5xw"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-                            gyroscope; picture-in-picture;
-                            web-share"
-                            allowfullscreen></iframe>
-                        </div>
-                    </div>  
-                </div>  
-                <div class="col-lg-6 col-md-6">
-                    <div class="video-wrapper">
-                       <div class="highlights-video">
-                            <iframe src="https://www.youtube.com/embed/FGwdRWTw5xw"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-                            gyroscope; picture-in-picture;
-                            web-share"
-                            allowfullscreen></iframe>
-                        </div>
-                    </div>  
-                </div>
-                <div class="col-md-12 mt-5">
-                    <div class="text-center">
-                        <a href="#" class="btn redbtn bluebtn">Discover Your Better Care<i><img src="images/arrblue.png"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="who-qualifies-section top-bottom-space">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-6">
-                    <h2>Who Qualifies for<br> 
-                        the NDIS?</h2>
-                    <h6>If you want to receive NDIS help, you must:</h6>
-                    <div class="list-style">
-                        <ul>
-                            <li>Possess a protected special category visa, be an Australian citizen, or be a permanent resident of Australia.</li>
-                            <li>Be between the ages of 7 and 65</li>
-                            <li>Have a serious, ongoing disability that affects your capacity to engage in activities of daily living OR need ongoing assistance to lessen your future needs</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="qualifies-image"><img src="images/qualifies.png" class="img-fluid" alt="banner-image"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="blog-section-wrapper top-bottom-space">
-        <div class="container">
-            <div class="row mb-4">
-                <div class="video-title">
-                    <h6>Your Better Care</h6>
-                    <h2>Latest News & Blogs</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-4">
-                    <div class="blog-box">
-                        <div class="blog-img"><img src="images/blog1.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="blog-date"><i class="bi bi-clock"></i> Jan 11, 2024</div>
-                        <p>Amet quis nisi, faucibus sit pulvinar in et. Urna cursus eleifend hac vitae fusce.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="blog-box">
-                        <div class="blog-img"><img src="images/blog1.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="blog-date"><i class="bi bi-clock"></i> Jan 11, 2024</div>
-                        <p>Amet quis nisi, faucibus sit pulvinar in et. Urna cursus eleifend hac vitae fusce.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="blog-box">
-                        <div class="blog-img"><img src="images/blog1.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="blog-date"><i class="bi bi-clock"></i> Jan 11, 2024</div>
-                        <p>Arcu, sed ac, gravida quam tincidunt. Sed amet id lectus non semper lacus diam.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="tes-section-wrapper top-bottom-space">
         <div class="container">
             <div class="row">
