--- a/index.html
+++ b/index.html
@@ -505,6 +505,12 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap-gallery.min.js"></script>
+        <script>
+            $(document).ready(function(){
+              bootstrapGallery('a.custom-selector');
+            });
+        </script>
         <script>
             $(document).ready(function(){
                 $('.owl-one').owlCarousel({
