--- a/maintain-employment.html
+++ b/maintain-employment.html
@@ -77,63 +77,44 @@
             </nav>
         </div>
     </header>
+    
     <div class="page-name-section bottom-space">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12">
                     <div class="banner-box section-text">
-                        <h2>Our<br> Services</h2>
+                        <h2>⁠Assistance with travel and transport arrangement</h2>
                     </div> 
                 </div>  
                 <div class="col-lg-7 col-md-12">
-                    <div><img src="images/services-title.jpg" class="img-fluid" alt="banner-image"></div>
+                    <div><img src="images/services-detail.jpg" class="img-fluid" alt="banner-image"></div>
                 </div> 
             </div>
         </div>
     </div>
-    <div class="our-services-wrapper">
-       <div class="container">
+
+    <div class="page-description-section">
+        <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <a href="maintain-employment.html" class="service-box">
-                        <div class="service-image"><img src="images/s1.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Assist Access / Maintain Employment</h2></div>
-                    </a>
-                </div> 
-                <div class="col-md-4">
-                    <a href="life-stage-transition.html" class="service-box">
-                        <div class="service-image"><img src="images/s2.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Assist-Life Stage Transition</h2></div>
-                    </a>
-                </div> 
-                <div class="col-md-4">
-                    <a href="personal-activities.html" class="service-box">
-                        <div class="service-image"><img src="images/s3.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Assist-Personal Activities</h2></div>
-                    </a>
-                </div>   
-                <div class="col-md-4">
-                    <a href="travel-transport.html" class="service-box">
-                        <div class="service-image"><img src="images/s4.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Assist - Travel / Transport</h2></div>
-                    </a>
+                <p>At Your Better Care, we recognize that travel can pose challenges for many individuals, potentially feeling like a burden. That's why we empathize with such concerns and offer comprehensive transport service support. Our aim is to empower participants, enabling them to travel independently using private vehicles or public transportation.</p>
+                <p> Our transport support extends beyond just facilitating travel; it also covers essential expenses, such as taxi hires or alternative options. This service is not limited to those unable to travel independently; it also caters to students commuting to and from school.</p>
+                <p>At Your Better Care, expect secure and hassle-free transport options scheduled in advance. Whether you need to reach educational facilities, workplaces, medical appointments, local shopping centers, or simply explore your community, we've got you covered.</p>
+                <p> At Your Better Care, you'll receive safe and convenient transport options, scheduled in advance, from us so that you can reach any place including:</p>
+                <div class="list-style">
+                    <ul>
+                        <li>School or another educational facility</li>
+                        <li>Work</li>
+                        <li>Your doctor or other medical appointments</li>
+                        <li>Your local shopping center's</li>
+                        <li>Around your community</li>
+                    </ul>
                 </div>
-                <div class="col-md-4">
-                    <a href="daily-tasks.html" class="service-box">
-                        <div class="service-image"><img src="images/s5.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Daily Tasks / Shared Living</h2></div>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="community-participation.html" class="service-box">
-                        <div class="service-image"><img src="images/s6.jpg" class="img-fluid" alt="banner-image"></div>
-                        <div class="service-title"><h2>Innovative Community Participation</h2></div>
-                    </a>
-                </div>
-            </div> 
+                <p>Rest assured, every member of our staff holds a valid Working with Children Check and Police check, along with the necessary qualifications for this industry, ensuring your safety and peace of mind.</p>
+            </div>
         </div>
     </div>
 
+    
     <div class="tes-section-wrapper top-bottom-space">
         <div class="container">
             <div class="row">
@@ -265,12 +246,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7"><p>Copyright © 2024 Your Better Care Community Service. All Rights Reserved.</p></div>
-                <div class="col-md-5"><div class="footer-links">
+                <div class="col-md-5">
+                <div class="footer-links">
                     <ul>
                         <li class="firstlink"><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms & Conditions</a></li>
                     </ul>
-                </div></div>
+                </div>
+                </div>
             </div>
         </div>
     </div>
