--- a/life-stage-transition.html
+++ b/life-stage-transition.html
@@ -83,7 +83,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12">
                     <div class="banner-box section-text">
-                        <h2>⁠Assistance with travel and transport arrangement</h2>
+                        <h2>⁠Assist-Life Stage Transition</h2>
                     </div> 
                 </div>  
                 <div class="col-lg-7 col-md-12">
