--- a/footer.html
+++ b/footer.html
@@ -37,9 +37,9 @@
                     <p><a href="about.html">About</a></p>
                     <p><a href="#">NDIS</a></p>
                     <p><a href="services.html">Services</a></p>
-                    <p><a href="#">Make A Referral</a></p>
-                    <p><a href="#">Gallery</a></p>
-                    <p><a href="#">Feedback</a></p>
+                    <p><a href="make-a-referral.html">Make A Referral</a></p>
+                    <p><a href="gallery.html">Gallery</a></p>
+                    <p><a href="contact-us.html">Contact Us</a></p>
                 </div>
             </div>
         </div>
