--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
                             <a href="#"><i class="bi bi-headset"></i> +61 466 355 650</a>
                         </div>
                         <div class="contact-us-link">
-                            <a href="#">Contact us</a>
+                            <a href="contact-us.html">Contact us</a>
                         </div>
                     </div>
                 </div>
