--- a/footer.html
+++ b/footer.html
@@ -21,8 +21,8 @@
                     <div class="footer-title">
                         <h3>Address</h3>
                     </div>
-                    <h6>Your Better Care</h6>
-                    <p>Melbourne, Victoria,<br> Australia</p>
+                    <a href="https://maps.app.goo.gl/Zpmk75cKwNUYhJh88"><h6>Your Better Care</h6>
+                    <p>Melbourne, Victoria,<br> Australia</p></a>
                     <div class="footer-logos">
                         <div class="tw-seven"><img src="images/ndis.png" class="img-fluid"></div>
                         <div class="tw-seven"><img src="images/flags.png" class="img-fluid"></div>
