--- a/footer.html
+++ b/footer.html
@@ -21,7 +21,7 @@
                     <div class="footer-title">
                         <h3>Address</h3>
                     </div>
-                    <a href="https://maps.app.goo.gl/Zpmk75cKwNUYhJh88"><h6>Your Better Care</h6>
+                    <a href="https://maps.app.goo.gl/Zpmk75cKwNUYhJh88" target="_blank"><h6>Your Better Care</h6>
                     <p>Melbourne, Victoria,<br> Australia</p></a>
                     <div class="footer-logos">
                         <div class="tw-seven"><img src="images/ndis.png" class="img-fluid"></div>
