--- a/group-centre-activities.html
+++ b/group-centre-activities.html
@@ -24,7 +24,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12">
                     <div class="banner-box section-text">
-                        <h2>Innovative Community Participation</h2>
+                        <h2>Group centre activities</h2>
                     </div> 
                 </div>  
                 <div class="col-lg-7 col-md-12">
