--- a/household-tasks.html
+++ b/household-tasks.html
@@ -37,20 +37,29 @@
     <div class="page-description-section">
         <div class="container">
             <div class="row">
-                <p>At Your Better Care, we recognize that travel can pose challenges for many individuals, potentially feeling like a burden. That's why we empathize with such concerns and offer comprehensive transport service support. Our aim is to empower participants, enabling them to travel independently using private vehicles or public transportation.</p>
-                <p> Our transport support extends beyond just facilitating travel; it also covers essential expenses, such as taxi hires or alternative options. This service is not limited to those unable to travel independently; it also caters to students commuting to and from school.</p>
-                <p>At Your Better Care, expect secure and hassle-free transport options scheduled in advance. Whether you need to reach educational facilities, workplaces, medical appointments, local shopping centers, or simply explore your community, we've got you covered.</p>
-                <p> At Your Better Care, you'll receive safe and convenient transport options, scheduled in advance, from us so that you can reach any place including:</p>
-                <div class="list-style">
-                    <ul>
-                        <li>School or another educational facility</li>
-                        <li>Work</li>
-                        <li>Your doctor or other medical appointments</li>
-                        <li>Your local shopping center's</li>
-                        <li>Around your community</li>
-                    </ul>
+                <p>At Your Better Care, we prioritize empowering individuals to maintain their independence while offering support where needed. Our team of skilled consultants is here to assist with a range of household tasks and other activities that may require additional help.</p>
+                <div class="py-3">
+                    <h4>Meal Preparation:</h4>
+                    <p>Our consultants are adept at meal preparation, ensuring that individuals receive nutritious and delicious meals tailored to their preferences and dietary requirements. Whether it's planning menus, grocery shopping, or cooking meals, we're here to make sure you have satisfying and healthy options.</p>
                 </div>
-                <p>Rest assured, every member of our staff holds a valid Working with Children Check and Police check, along with the necessary qualifications for this industry, ensuring your safety and peace of mind.</p>
+                <div class="py-3">
+                    <h4>House Cleaning</h4>
+                    <p>A clean and tidy living environment is essential for overall well-being. Our consultants can assist with various house cleaning tasks, including dusting, vacuuming, mopping floors, and sanitizing surfaces, to create a comfortable and hygienic space for you to enjoy.</p>
+                </div>
+                <div class="py-3">
+                    <h4>Garden Maintenance</h4>
+                    <p>If you have a garden or outdoor space that needs attention, our consultants are available to help with garden maintenance tasks. From mowing the lawn to weeding flower beds and pruning plants, we'll ensure your outdoor area remains beautiful and well-kept.</p>
+                </div>
+                <div class="py-3">
+                    <h4>House Maintenance</h4>
+                    <p>Keeping your home in good repair is crucial for safety and comfort. Our consultants can assist with basic house maintenance tasks, such as changing light bulbs, fixing minor repairs, and troubleshooting household appliances, to help you maintain a functional and comfortable living environment.</p>
+                </div>
+                <div class="py-3">
+                    <h4>Laundry</h4>
+                    <p>Laundry can be a time-consuming task, but our consultants are here to lend a hand. Whether it's sorting, washing, drying, folding, or ironing clothes, linens, and towels, we'll take care of your laundry needs so you can focus on other priorities.</p>
+                </div>
+                <p>At Your Better Care, we understand that every individual has unique needs and preferences. That's why our consultants provide personalized assistance tailored to your specific requirements. Whether you need help with household tasks or any other activity, we're here to support you in living life to the fullest while maintaining your independence.</p>
+                
             </div>
         </div>
     </div>
