--- a/participate-community.html
+++ b/participate-community.html
@@ -37,20 +37,9 @@
     <div class="page-description-section">
         <div class="container">
             <div class="row">
-                <p>At Your Better Care, we recognize that travel can pose challenges for many individuals, potentially feeling like a burden. That's why we empathize with such concerns and offer comprehensive transport service support. Our aim is to empower participants, enabling them to travel independently using private vehicles or public transportation.</p>
-                <p> Our transport support extends beyond just facilitating travel; it also covers essential expenses, such as taxi hires or alternative options. This service is not limited to those unable to travel independently; it also caters to students commuting to and from school.</p>
-                <p>At Your Better Care, expect secure and hassle-free transport options scheduled in advance. Whether you need to reach educational facilities, workplaces, medical appointments, local shopping centers, or simply explore your community, we've got you covered.</p>
-                <p> At Your Better Care, you'll receive safe and convenient transport options, scheduled in advance, from us so that you can reach any place including:</p>
-                <div class="list-style">
-                    <ul>
-                        <li>School or another educational facility</li>
-                        <li>Work</li>
-                        <li>Your doctor or other medical appointments</li>
-                        <li>Your local shopping center's</li>
-                        <li>Around your community</li>
-                    </ul>
-                </div>
-                <p>Rest assured, every member of our staff holds a valid Working with Children Check and Police check, along with the necessary qualifications for this industry, ensuring your safety and peace of mind.</p>
+                <p>Your Better Care offers Assistance with Social and Community Participation,which falls under the NDIS support category.</p>
+                <p>With the funding received, support NDIS participants can participate in recreational, community, and social activities to meet their goals. As an NDIS registered provider, Impact Care has the resources to facilitate these activities in a community setting.</p>
+        
             </div>
         </div>
     </div>
