--- a/community-participation.html
+++ b/community-participation.html
@@ -37,20 +37,11 @@
     <div class="page-description-section">
         <div class="container">
             <div class="row">
-                <p>At Your Better Care, we recognize that travel can pose challenges for many individuals, potentially feeling like a burden. That's why we empathize with such concerns and offer comprehensive transport service support. Our aim is to empower participants, enabling them to travel independently using private vehicles or public transportation.</p>
-                <p> Our transport support extends beyond just facilitating travel; it also covers essential expenses, such as taxi hires or alternative options. This service is not limited to those unable to travel independently; it also caters to students commuting to and from school.</p>
-                <p>At Your Better Care, expect secure and hassle-free transport options scheduled in advance. Whether you need to reach educational facilities, workplaces, medical appointments, local shopping centers, or simply explore your community, we've got you covered.</p>
-                <p> At Your Better Care, you'll receive safe and convenient transport options, scheduled in advance, from us so that you can reach any place including:</p>
-                <div class="list-style">
-                    <ul>
-                        <li>School or another educational facility</li>
-                        <li>Work</li>
-                        <li>Your doctor or other medical appointments</li>
-                        <li>Your local shopping center's</li>
-                        <li>Around your community</li>
-                    </ul>
-                </div>
-                <p>Rest assured, every member of our staff holds a valid Working with Children Check and Police check, along with the necessary qualifications for this industry, ensuring your safety and peace of mind.</p>
+                <p>At Your Better Care, we understand the significance of Community Participation within the NDIS framework, particularly under category 0116, which encompasses activities beyond traditional community participation groups.</p>
+                <p>Our approach to Community Participation is centered on providing opportunities for individuals to engage in a wide range of activities that cater to their unique needs and interests. Our dedicated staff instills a strong sense of community involvement by organizing activities within our facility that are designed to meet the diverse requirements of each participant.</p>
+                <p>We prioritize inclusivity and personalized support, ensuring that every individual has access to activities that resonate with their preferences and goals. By offering a variety of options, we aim to promote social interaction, skill development, and overall well-being among our participants.</p>
+                <p>At Your Better Care, we're committed to going beyond conventional boundaries to empower individuals to explore new experiences, forge meaningful connections, and thrive within our supportive community.</p>
+                
             </div>
         </div>
     </div>
