--- a/life-stage-transition.html
+++ b/life-stage-transition.html
@@ -44,11 +44,11 @@
                 <p><b>Crisis and Conflict Resolution:</b> We offer guidance and assistance in navigating crises and resolving conflicts effectively, ensuring individuals feel supported and empowered during challenging times.</p>
                 <p><b>Financial Mentoring:</b> Our financial mentoring services help individuals with budgeting, daily planning, and managing their finances effectively.</p>
                 <p><b>Establishing Supportive Networks:</b> We assist individuals in building supportive networks within their community circles, fostering a sense of belonging and connection.</p>
-                <p>Linkage Support: We provide support in connecting individuals with other supportive community services and programs, ensuring they have access to the resources they need.</p>
-                <p>Life Planning and Goal Planning: Our team works with individuals to develop personalized life plans and set achievable goals, empowering them to realize their aspirations.</p>
-                <p>Assistance with Accommodation and Tenancy Obligations: We offer guidance and support to individuals in managing their accommodation and tenancy obligations, ensuring they maintain stable and secure housing.</p>
-                <p>Life Transition Planning: We provide mentoring, peer support, and individual skill development to assist individuals in navigating life transitions effectively.</p>
-                <p>Assistance with Decision-Making: We offer support and guidance to individuals in making informed decisions that align with their values and goals.</p>
+                <p><b>Linkage Support:</b> We provide support in connecting individuals with other supportive community services and programs, ensuring they have access to the resources they need.</p>
+                <p><b>Life Planning and Goal Planning:</b> Our team works with individuals to develop personalized life plans and set achievable goals, empowering them to realize their aspirations.</p>
+                <p><b>Assistance with Accommodation and Tenancy Obligations:</b> We offer guidance and support to individuals in managing their accommodation and tenancy obligations, ensuring they maintain stable and secure housing.</p>
+                <p><b>Life Transition Planning:</b> We provide mentoring, peer support, and individual skill development to assist individuals in navigating life transitions effectively.</p>
+                <p><b>Assistance with Decision-Making:</b> We offer support and guidance to individuals in making informed decisions that align with their values and goals.</p>
                 <p>At Your Better Care, we're dedicated to providing comprehensive support tailored to meet the individual needs and goals of each participant. Our compassionate team is committed to empowering individuals to navigate change with confidence and achieve their fullest potential.</p>
             
             </div>
